--- a/Curso-JavaScript-Universidade_XTI/WebContent/Estrutura_Condicional_if.html
+++ b/Curso-JavaScript-Universidade_XTI/WebContent/Estrutura_Condicional_if.html
@@ -4,7 +4,7 @@
         <title>Estrutura Condicional if</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="JS/"></script>
+    <script type="text/javascript" src="JS/Estrutura_Condicional_if.js"></script>
     </head>
     <body>
         
