Adicionando exemplo Objetos_JavaScript (html,js); alterando o titulo de tratamento_excecoes.html

--- a/Curso-JavaScript-Universidade_XTI/WebContent/Objetos_JavaScript.html
+++ b/Curso-JavaScript-Universidade_XTI/WebContent/Objetos_JavaScript.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tratamento de Exceções</title>
+<title>Objetos JavaScript</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="CSS/css.css" media="all">
-<script type="text/javascript" src="JS/Tratamento_de_Excecoes.js"></script>
+<script type="text/javascript" src="JS/Objetos_JavaScript.js"></script>
 </head>
 <body>
 
