Adicionando exemplo DOM_HTML_API, adicionando js e css do bootstrap no projeto DOM_Document_Object_Model

--- a/Curso-JavaScript-Universidade_XTI/WebContent/Aula_042-DOM_HTML_API/DOM_HTML_API.html
+++ b/Curso-JavaScript-Universidade_XTI/WebContent/Aula_042-DOM_HTML_API/DOM_HTML_API.html
@@ -1,28 +1,3 @@
-<!--  <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-
-<html>
-<head>
-      <title>DOM Document Object Model</title>
-	 <script type="text/javascript" src="js/DOM_Document_Object_Model.js"> </script>
-
-</head>
-
-<body>
-   
-      <h2 id="tit_id" name = "tit_name" class = "tit_class">DOM API</h2> 
-
-      <div>
-         <img src="../img/ball_disponivel.jpg" alt="Diponivel"/>
-		 <img src="../img/ball_indisponivel.jpg" alt="Diponivel"/>
-		 <img src="../img/ball_disponivel.jpg " alt="Diponivel"/>
-      </div>	  
-
-</body>
-
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>       
@@ -108,13 +83,11 @@
                
             </div>
 
-
-
         </div>   
 
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/DOM_Document_Object_Model.js"></script>
+        <script type="text/javascript" src="js/DOM_HTML_API.js"></script>
     </body>
 
 </html>
