--- a/Curso-JavaScript-Universidade_XTI/WebContent/Aula_042-DOM_HTML_API/DOM_HTML_API.html
+++ b/Curso-JavaScript-Universidade_XTI/WebContent/Aula_042-DOM_HTML_API/DOM_HTML_API.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>       
-        <title>Curso XTI</title>
+        <title>DOM HTML API</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 
